# lindenmayer-systems

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
src/compose/: sequence.py
src/plotter/: __init__.py  main.py  plot.py  write_gif.py
src/util/: io.py
tests/: test_abop13.py  test_abop14.py  test_main.py  test_sequence.py  test_util.py
