[metadata]
name = lindenmayer-systems
version = 0.0.1
description = Explores Lindenmayer systems
long_description_content_type = text/markdown
url = https://github.com/umayrh/lindenmayer-systems
author = Umayr Hassan
author_email = umayrh@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Utilities
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.9
project_urls =
    Bug Reports = https://github.com/umayrh/lindenmayer-systems/issues
    Source = https://github.com/umayrh/lindenmayer-systems
license_files = LICENSE.txt
[options]
keywords = l-systems, algorithmic botany, formal languages
package_dir =
    = src
packages =
    = find:
python_requires =
    >=3.6, <4
install_requires =
    matplotlib
    argparse
extras_require =
    dev = check-manifest
    test = coverage
},
#package_data =
#    sample = package_data.dat
#data_files=
#    my_data, data/data_file
#entry_points =
#    console_scripts = sample=sample:main
